--- a/HappyNewYear.html
+++ b/HappyNewYear.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
-    <div class="word">Happy New Year !</div>
+    <div class="word glow-text">Happy New Year !</div>
   </body>
 </html>
